# imessage_extractor

./: CONTACTS_README.md  Cargo.toml  DEBUG_INSTRUCTIONS.md  README.md  contacts_helper.swift
src/: clean_message.rs  contacts.rs  html_output.rs  main.rs  message_store.rs  resolved_handle.rs  tapback_emoji.rs
src/snapshots/: imessage_extractor__contacts__tests__fetch_all_contacts.snap
