[package]
name = "imessage_extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
gumdrop = "0.8.1"
imessage-database = "3.1"
rusqlite = "0.37.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = { version = "1.40", features = ["yaml"] }
